Nav items on mobile fix

--- a/app/src/scss/components/_base.scss
+++ b/app/src/scss/components/_base.scss
@@ -2,6 +2,7 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 :focus {
@@ -46,7 +47,7 @@ body > header,
     font-size: 1.8em;
     line-height: 1.4em;
     margin: 0;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: "Roboto Condensed", sans-serif;
     font-weight: normal;
     max-width: 54rem;
     margin-bottom: 1rem;
