--- a/app/src/scss/components/_nav.scss
+++ b/app/src/scss/components/_nav.scss
@@ -5,9 +5,13 @@
   right: 0;
   background-color: #fff;
   display: flex;
+
   align-items: center;
   box-shadow: $bottom-shadow;
   z-index: $zindex-nav;
+  @include min-desktop() {
+    overflow: hidden;
+  }
 
   .logo {
     min-height: calc(4.5rem + 2px);
@@ -21,7 +25,7 @@
 
   #nav-items-toggle {
     color: $primary-color;
-    padding: 1.5rem;
+    padding: 1.5rem 1.5rem 1.5rem 1.5rem;
     margin: 0.25rem 0;
     border: 0;
     background: rgba(0, 0, 0, 0);
@@ -164,9 +168,9 @@
         &:hover:not(#menu-item-6) {
           border-bottom: 2px solid rgba($primary-color, 0.5);
         }
-        @include min-tablet() {
-          min-height: calc(4.5rem + 2px);
-        }
+
+        min-height: calc(4.5rem + 2px);
+
         @include min-desktop-hd() {
           flex-flow: row;
         }
